# chatlocal

./: .gitignore  README.md
app-chat-politicas/backend/: .cursorindexingignore  Dockerfile  README.md  constants.py  deploy-azure.yaml  pyproject.toml  requirements.txt
app-chat-politicas/backend/app/: main.py
app-chat-politicas/backend/app/api/: dependencies.py
app-chat-politicas/backend/core/: config.py  database.py
app-chat-politicas/backend/deploy/: main.yaml
app-chat-politicas/backend/domain/utilities/: __init__.py
app-chat-politicas/backend/infrastructure/: __init__.py
app-chat-politicas/backend/infrastructure/database/: __init__.py  init_db.py
app-chat-politicas/backend/infrastructure/services/: __init__.py
app-chat-politicas/backend/middlewares/: auth.py  rate_limit.py
app-chat-politicas/backend/service/azure_controller/: __init__.py
app-chat-politicas/backend/shared/utils/: id_generator.py
app-chat-politicas/backend/usecases/app_config/: __init__.py  accept_terms.py  get_app_config.py  get_user_actions.py  log_action.py  login.py
app-chat-politicas/backend/usecases/chat/: __init__.py  delete_chat_session.py  download_chat.py  get_chat.py  get_chat_response.py  get_chat_session.py  get_relevant_documents.py  get_user_chat_sessions.py  rate_message.py  save_chat_session.py
app-chat-politicas/backend/usecases/documents/: __init__.py  delete_document.py  get_documents_by_user.py  update_document.py  upload_document.py
app-chat-politicas/backend/usecases/knowledge_base/: __init__.py  (+6 more)
app-chat-politicas/backend/utils/: __init__.py
(+220 files in other folders)
